--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.1",
     "@spectrum-icons/illustrations": "^3.6.11",
     "@spectrum-icons/workflow": "^4.2.10",
+    "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
